<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/black">

    <ScrollView
        android:id="@+id/fi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview1"
                android:paddingStart="20dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/textview2"
                android:textColor="@color/gray1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview3"
                android:paddingStart="20dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview4"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview5"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview6"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview7"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview8"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview1"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/textview2"
                android:textColor="@color/gray1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview3"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview4"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview5"
                android:paddingStart="20dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview6"
                android:paddingStart="20dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview7"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview8"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview1"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/textview2"
                android:textColor="@color/gray1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview3"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview4"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview5"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview6"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview7"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview8"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview1"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/textview2"
                android:textColor="@color/gray1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview3"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview4"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview5"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview6"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview7"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview8"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview1"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/textview2"
                android:textColor="@color/gray1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview3"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview4"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview5"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview6"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview7"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview8"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview1"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/textview2"
                android:textColor="@color/gray1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview3"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview4"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview5"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview5"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textView47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview5"
                android:paddingStart="10dp"
                android:textColor="@color/gray1"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#5A5A5A"
                android:text="Далее" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>